--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,13 @@
 $blue: #9d1676;
 
 @import 'bulma';
+
+main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  > .section {
+    flex-grow: 1;
+  }
+}
