Better card content

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -4,9 +4,9 @@
       <div class="column">
         <div class="card is-fullwidth">
           <header class="card-header">
-            <p class="card-header-title">
+            <div class="card-header-title content">
               {{md-text text=prompt.text}}
-            </p>
+            </div>
           </header>
         </div>
       </div>
