--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -33,8 +33,18 @@
 
   <footer class="footer is-primary">
     <div class="container">
-      <div class="content">
-        <h4>&copy; 2016 Ryan Tablada</h4>
+      <div class="columns">
+        <div class="column">
+          <div class="content">
+            <h4>&copy; 2016 Ryan Tablada</h4>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="content has-text-right">
+            <h4>This app is built with <a href="https://emberjs.com">Ember.js</a>, <a href="https://phoenixframework.org">Phoenix</a>, and <a href="https://bulma.io">Bulma</a>.</h4>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
